# housing_price_prediction

./: .dockerignore  .env.template  .pre-commit-config.yaml  Dockerfile  README.md  enums.py  main.py  pydantic_models.py  pyproject.toml  requirements.txt
.dvc/: config  config.local.template
.github/workflows/: code_quality.yaml  docker.yaml  workflow.yaml
data_loaders/: __init__.py
docker_images/: .gitignore  docker_image.tar.dvc
models/: __init__.py  knn.py  random_forest.py
models_bin/: model.sav  model.sav.dvc
scraper/: __init__.py  ogloszenia_trojmiasto.py  olx.py  tyszkiewicz.py  tyszkiwicz.py
src/: enums.py  main.py  pydantic_models.py
src/data_downloaders/: __init__.py
src/models/: knn.py
src/scraper/: __init__.py  tyszkiewicz.py
src/unit_tests/scraper/: tyszkiewicz_tests.py
unit_tests/scraper/: tyszkiewicz_tests.py
